Fixes scrollbar track color (background bleeds through leaving a gap)

--- a/patterns/scrollbars/assets/styles/scrollbars.scss
+++ b/patterns/scrollbars/assets/styles/scrollbars.scss
@@ -15,7 +15,7 @@
 
   &::-webkit-scrollbar-track {
     border-radius: 0;
-    background: rgba(0,0,0,0.1);
+    background: $color-bg-lane-standard;
   }
 
   &::-webkit-scrollbar-thumb {
